--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -1,1 +1,2 @@
 MONGO_URL = 'mongodb+srv://prasannachand77:test1234@mytutor-cluster.ummezhd.mongodb.net/mytutor-db'
+JWT_SECRET = 'CLB27720B922015727'
