--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.2",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
@@ -23,7 +24,11 @@
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
+    "react-spinners": "^0.13.8",
+    "redux": "^5.0.1",
+    "redux-toolkit": "^1.1.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
