--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -16,15 +16,18 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.3.2",
+    "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
