--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -17,6 +17,7 @@
     "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.3.2",
     "@mapbox/search-js-react": "^1.0.0-beta.18",
+    "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
@@ -31,6 +32,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
+    "react-widgets": "^5.8.4",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
     "yup": "^1.3.2"
