--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -19,6 +19,7 @@
     "@mapbox/search-js-react": "^1.0.0-beta.18",
     "@react-google-maps/api": "^2.19.2",
     "@reduxjs/toolkit": "^2.0.1",
+    "@tanstack/react-table": "^8.11.8",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "react": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
+    "react-table": "^7.8.0",
     "react-widgets": "^5.8.4",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
