--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -29,6 +29,7 @@
     "react-hook-form": "^7.49.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-map-gl": "^7.1.7",
     "react-places-autocomplete": "^7.3.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
