--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.11.8",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
