email verification completed

--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -1,2 +1,8 @@
 MONGO_URL = 'mongodb+srv://prasannachand77:test1234@mytutor-cluster.ummezhd.mongodb.net/mytutor-db'
 JWT_SECRET = 'CLB27720B922015727'
+HOST = 'smtp.gmail.com'
+SERVICE = 'gmail'
+EMAIL_PORT = 587
+SECURE = true
+USER = 'prasannachand77@gmail.com'
+PASS = 'hdej htkt jteh ssbe'
