--- a/MyTutor-Nepal-Backend/package.json
+++ b/MyTutor-Nepal-Backend/package.json
@@ -18,7 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.0.3"
+    "mongoose": "^8.0.3",
+    "nodemailer": "^6.9.11"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
