--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -1,6 +1,7 @@
 MONGO_URL = 'mongodb+srv://prasannachand77:test1234@mytutor-cluster.ummezhd.mongodb.net/mytutor-db'
 # MONGO_URL = 'mongodb://localhost:27017'
 JWT_SECRET = 'CLB27720B922015727'
+RESET_SECRET = 'JWT_SECOND_SECRET_KEY'
 HOST = 'smtp.gmail.com'
 SERVICE = 'gmail'
 EMAIL_PORT = 587
