Logic for ending appointment completed. Added scheduler

--- a/MyTutor-Nepal-Frontend/.env
+++ b/MyTutor-Nepal-Frontend/.env
@@ -1,2 +1,2 @@
-API_KEY = 'b67402f59aa24b6ea5b2b5b7309a6d66'
-apiEndpoint = "https://api.opencagedata.com/geocode/v1/json";
+VITE_API_KEY = 'b67402f59aa24b6ea5b2b5b7309a6d66'
+VITE_API_ENDPOINT = "https://api.opencagedata.com/geocode/v1/json";
