--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -1,4 +1,5 @@
 MONGO_URL = 'mongodb+srv://prasannachand77:test1234@mytutor-cluster.ummezhd.mongodb.net/mytutor-db'
+CLIENT_PORT = "http://localhost:5173"
 # MONGO_URL = 'mongodb://localhost:27017'
 JWT_SECRET = 'CLB27720B922015727'
 RESET_SECRET = 'JWT_SECOND_SECRET_KEY'
