--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^4.12.0",
     "react-map-gl": "^7.1.7",
     "react-places-autocomplete": "^7.3.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
