--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -9,3 +9,5 @@ EMAIL_PORT = 587
 SECURE = true
 USER = 'prasannachand77@gmail.com'
 PASS = 'hdej htkt jteh ssbe'
+SENTIMENT_ENDPOINT = "https://api-inference.huggingface.co/models/MarieAngeA13/Sentiment-Analysis-BERT"
+SENTIMENT_TOKEN = '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'
