--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -40,6 +40,7 @@
     "react-router-dom": "^6.20.1",
     "react-spinners": "^0.13.8",
     "react-table": "^7.8.0",
+    "react-tooltip": "^5.26.3",
     "react-widgets": "^5.8.4",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
