--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -45,6 +45,7 @@
     "react-widgets": "^5.8.4",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
+    "sweetalert2": "^11.10.7",
     "yup": "^1.3.2"
   },
   "devDependencies": {
