cash on delivery completed

--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -11,3 +11,4 @@ USER = 'prasannachand77@gmail.com'
 PASS = 'hdej htkt jteh ssbe'
 SENTIMENT_ENDPOINT = "https://api-inference.huggingface.co/models/MarieAngeA13/Sentiment-Analysis-BERT"
 SENTIMENT_TOKEN = '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'
+KHALTI_LIVE_SECRET_KEY = `29b745a7b9574db6957cb20c322a6fcb`
