cleaning up code

--- a/MyTutor-Nepal-Backend/.env
+++ b/MyTutor-Nepal-Backend/.env
@@ -12,3 +12,5 @@ PASS = 'hdej htkt jteh ssbe'
 SENTIMENT_ENDPOINT = "https://api-inference.huggingface.co/models/MarieAngeA13/Sentiment-Analysis-BERT"
 SENTIMENT_TOKEN = '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'
 KHALTI_LIVE_SECRET_KEY = `29b745a7b9574db6957cb20c322a6fcb`
+KHALTI_INITIATE_API = "https://a.khalti.com/api/v2/epayment/initiate/"
+KHALTI_LOOKUP_API = "https://a.khalti.com/api/v2/epayment/lookup/"
