--- a/MyTutor-Nepal-Frontend/package.json
+++ b/MyTutor-Nepal-Frontend/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.6.2",
     "framer-motion": "^10.16.14",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-datepicker": "^6.1.0",
