--- a/MyTutor-Nepal-Backend/package.json
+++ b/MyTutor-Nepal-Backend/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "devStart": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -27,5 +27,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
